@@ -581,14 +581,14 @@ public class ArztPanel extends JXPanel implements PropertyChangeListener,TableMo
 	public void formulareAuswerten(){
 		int row = arzttbl.getSelectedRow(); 
 		if(row >= 0){
-			String sid = new Integer((String) arzttbl.getValueAt(row, 9)).toString();
+			String sid = Integer.valueOf((String) arzttbl.getValueAt(row, 9)).toString();
     		iformular = -1;
     		KassenFormulare kf = new KassenFormulare(Reha.thisFrame,titel,formularid);
     		Point pt = jbut[3].getLocationOnScreen();
     		kf.setLocation(pt.x-100,pt.y+25);
     		kf.setModal(true);
     		kf.setVisible(true);
-    		iformular = new Integer(formularid.getText());
+    		iformular = Integer.valueOf(formularid.getText());
     		kf = null;
     		final String xid = sid;
     		if(iformular >= 0){
